--- a/PruebaTecnicaWebAPP/appsettings.json
+++ b/PruebaTecnicaWebAPP/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MSI;Database=PruebaTecnicaDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=MSI;Database=PruebaTecnicaDb;Trusted_Connection=True;TrustServerCertificate=True;",
+    "MySqlConnection": "server=localhost;port=3306;database=PruebaTecnicaDb;user=root;password=root;"
 
   },
   "Logging": {
