--- a/PruebatecnicaCRUD.Infrastructure.Persistence/PruebatecnicaCRUD.Infrastructure.Persistence.csproj
+++ b/PruebatecnicaCRUD.Infrastructure.Persistence/PruebatecnicaCRUD.Infrastructure.Persistence.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.9" />
+    <PackageReference Include="MySqlConnector" Version="2.4.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
