Jwt finalizado pa admin

--- a/PruebaTecnicaWebAPP/appsettings.json
+++ b/PruebaTecnicaWebAPP/appsettings.json
@@ -4,6 +4,13 @@
     "MySqlConnection": "server=localhost;port=3306;database=PruebaTecnicaDb;user=root;password=root;"
 
   },
+  "JwtConfig": {
+    "Issuer": "https://localhost:5001",
+    "https": "https://localhost:5001",
+    "Key": "EstaEsUnaClaveMuyLargaParaQueFuncioneElToken",
+    "Audience": "https://localhost:5001",
+    "TokenValidityMins": 30
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
