--- a/PruebatecnicaCRED.Core.Application/PruebatecnicaCRUD.Core.Application.csproj
+++ b/PruebatecnicaCRED.Core.Application/PruebatecnicaCRUD.Core.Application.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.9" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
